@@ -20,8 +20,10 @@ import com.google.common.collect.ImmutableList;
 import io.activej.serializer.BinarySerializer;
 import io.activej.serializer.annotations.Deserialize;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.SortedSet;
 import java.util.stream.Collectors;
 import lombok.EqualsAndHashCode;
@@ -97,11 +99,11 @@ public class DocAdapterCatalog extends AdapterCatalog {
             int position,
             LogicalColumn logicalColumn ) {
         PhysicalColumn column = new PhysicalColumn( name, logicalColumn.tableId, allocId, adapterId, position, logicalColumn );
-        PhysicalTable table = fromAllocation( allocId, PhysicalTable.class );
-        List<PhysicalColumn> columns = new ArrayList<>( table.columns );
-        columns.add( position - 1, column );
+        PhysicalEntity table = fromAllocation( allocId, PhysicalEntity.class );
+        // List<PhysicalColumn> columns = new ArrayList<>( getOrderedColumns( allocId ) );
+        // columns.add( position - 1, column );
         addColumn( column );
-        addPhysical( getAlloc( table.allocationId ), table.toBuilder().columns( ImmutableList.copyOf( columns ) ).build() );
+        //addPhysical( getAlloc( table.allocationId ), table.toBuilder().columns( ImmutableList.copyOf( columns ) ).build() );
         return column;
     }
 
@@ -117,7 +119,7 @@ public class DocAdapterCatalog extends AdapterCatalog {
 
 
     public List<? extends PhysicalField> getFields( long allocId ) {
-        return fields.values().stream().filter( f -> f.allocId == allocId ).collect( Collectors.toList() );
+        return fields.values().stream().filter( f -> f.allocId == allocId ).toList();
     }
 
 
@@ -134,13 +136,19 @@ public class DocAdapterCatalog extends AdapterCatalog {
     public PhysicalColumn updateColumnType( long allocId, LogicalColumn newCol ) {
         PhysicalColumn old = getColumn( newCol.id, allocId );
         PhysicalColumn column = new PhysicalColumn( old.name, newCol.tableId, allocId, old.adapterId, old.position, newCol );
-        PhysicalTable table = fromAllocation( allocId, PhysicalTable.class );
-        List<PhysicalColumn> pColumn = new ArrayList<>( table.columns );
-        pColumn.remove( old );
-        pColumn.add( column );
-        addPhysical( getAlloc( table.allocationId ), table.toBuilder().columns( ImmutableList.copyOf( pColumn ) ).build() );
+        addColumn( column );
+        // PhysicalEntity table = fromAllocation( allocId, PhysicalEntity.class );
+        // List<PhysicalColumn> pColumn = new ArrayList<>( getOrderedColumns( allocId ) );
+        // pColumn.remove( old );
+        // pColumn.add( column );
+        //addPhysical( getAlloc( table.allocationId ), table.toBuilder().columns( ImmutableList.copyOf( pColumn ) ).build() );
 
         return column;
+    }
+
+
+    public List<PhysicalColumn> getOrderedColumns( long allocId ) {
+        return fields.values().stream().filter( c -> c.allocId == allocId ).map( p -> p.unwrap( PhysicalColumn.class ) ).filter( Optional::isPresent ).map( Optional::get ).sorted( Comparator.comparingInt( c -> c.position ) ).toList();
     }
 
 
